--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                         <span class="text-primary">Cheng, Ph.D</span>
                     </h1>
                     <div class="subheading mb-5">
-                        4 Huntington St· New Brunswick, NJ 08901
-                        <a href="mailto:name@email.com">yiyun.cheng@rutgers.edu</a>
+                        4 Huntington St· New Brunswick, NJ 08901 
+                        <br>
+                        <i class="fa-solid fa-envelope"></i> <a href="mailto:yiyun.cheng@rutgers.edu">yiyun.cheng@rutgers.edu</a>
                     </div>
                     <p class="lead mb-5">Hi! I am an assistant professor at the Department of Library and Information Science at <a href="https://comminfo.rutgers.edu/">Rutgers University</a>. I am interested in investigating how interoperability issues in taxonomies and metadata, may have implications towards data curation.  My work leverages conceptual modeling, qualitative reasoning, and logic-based methods for merging and aligning geographic and biodiversity taxonomies.</p>
                     
