--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <p class="lead mb-5">Hi! I am an assistant professor at the Department of Library and Information Science at <a href="https://comminfo.rutgers.edu/">Rutgers University</a>. I am interested in investigating how interoperability issues in taxonomies and metadata, may have implications towards data curation.  My work leverages conceptual modeling, qualitative reasoning, and logic-based methods for merging and aligning geographic and biodiversity taxonomies.</p>
                     
-                    <p class="lead mb-5">When I'm not working, I enjoy traveling & exploring new places. I am currently collecting U.S. national parks, Broadway musicals, as well as all the escape games in New Jersey area. I am also a regular group fitness goer.</p>
+                    <p class="lead mb-5">When I'm not working, I enjoy traveling & exploring new places. I am currently collecting U.S. national parks, Broadway musicals, as well as all the escape games in the New Jersey area. I am also a regular group fitness goer.</p>
 
                     <div class="social-icons">
                         <a class="social-icon" href="https://scholar.google.com/citations?hl=en&user=Twgvb7AAAAAJ"><i class="ai ai-google-scholar-square ai-3x"></i></a>
