--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li>Examining data curation practices in biodiversity data and natural history museum collections</li> </ul> 
                     
                     
-                    <p class="lead mb-5">When I'm not working, I enjoy traveling & exploring new places. I am currently collecting U.S. national parks, Broadway musicals, as well as all the escape games in the New Jersey area. I am also a regular group fitness goer.</p>
+                    <p class="lead mb-5">When I'm not at work, I'm likely traveling and exploring new places somewhere. I am currently collecting U.S. national parks, Broadway musicals, as well as all the escape games in the New Jersey area. I am also a regular group fitness goer! </p>
 
                     <div class="social-icons">
                         <a class="social-icon" href="https://scholar.google.com/citations?hl=en&user=Twgvb7AAAAAJ"><i class="ai ai-google-scholar-square ai-3x"></i></a>
