--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Research</h2>
-                    
+                    <div class="subheading mb-3">selected publications</div>
+                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Taxonomy alignment</h3>
