--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <br>
                         <i class="fa-solid fa-envelope"></i> <a href="mailto:yiyun.cheng@rutgers.edu" style="color:crimson">yiyun.cheng@rutgers.edu</a>
                     </div>
-                    <p class="lead mb-5">Hi! I am an assistant professor at the <a href="https://comminfo.rutgers.edu/" style="color:crimson"> School of Communication and Information</a> at Rutgers University. I am interested in investigating how interoperability issues in taxonomies and metadata, may have implications towards data curation.  My work leverages conceptual modeling, qualitative reasoning, and logic-based methods for merging and aligning geographic and biodiversity taxonomies. My ongoing projects are focusing on the following:</p>
+                    <p class="lead mb-5">Hi! I am an assistant professor at the <a href="https://comminfo.rutgers.edu/" style="color:crimson"> School of Communication and Information</a> at Rutgers University. I am interested in solving data curation problems, specifically how taxonomies and metadata might affect data integration.  My work leverages conceptual models and logic-based reasoning to develop and maintain computational workflows. My ongoing projects are focusing on the following:</p>
                     
                     <ul> <li >Comparing different alignment methods used in knowledge organization systems</li> <li>Investigating implicit assumptions in geographic taxonomies</li>
                     <li>Exploring the use of provenance metadata and conceptual models</li>
