--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Provenance Metadata</h3>
                             
-                            <p>Bettivia, R., Cheng, Y.-Y., Gryk, M. (forthcoming in 2022). Documenting the Future: Navigating Provenance Metadata Standards. To appear in Synthesis Lectures on Information Concepts, Retrieval, and Services. SpringerNature.</p>
+                            <p>Bettivia, R., Cheng, Y.-Y., Gryk, M. (2022). Documenting the Future: Navigating Provenance Metadata Standards. Synthesis Lectures on Information Concepts, Retrieval, and Services. SpringerNature.</p>
                             
                             <p>Bettivia, R., Cheng, Y.-Y., Gryk, M., Bishop, W., Chassanoff, A., Greenberg, J., Lischer-Katz, Z. (in press). Storied Past, Bright Future: A Provenance Jam Session. To appear in Proceedings of the ASIS&T 2022 Annual Meeting.</p>
                         </div>
