--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="subheading mb-5">
                         4 Huntington St· New Brunswick, NJ 08901 
                         <br>
-                        <i class="fa-solid fa-envelope"></i> <a href="mailto:yiyun.cheng@rutgers.edu" style="color:crimson">yiyun.cheng@rutgers.edu</a>
+                        <i class="fa-solid fa-envelope"></i> <a href="mailto:yiyun.cheng@rutgers.edu" style="color:DarkTurquoise">yiyun.cheng@rutgers.edu</a>
                     </div>
                     <p class="lead mb-5">Hi! I am an assistant professor at the <a href="https://comminfo.rutgers.edu/" style="color:crimson"> School of Communication and Information</a> at Rutgers University. I am interested in solving data curation problems, specifically how taxonomies and metadata might affect data integration.  My work leverages conceptual models and logic-based reasoning to develop and maintain computational workflows. My ongoing projects are focusing on the following:</p>
                     
