--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a class="social-icon" href="https://scholar.google.com/citations?hl=en&user=Twgvb7AAAAAJ"><i class="ai ai-google-scholar-square ai-3x"></i></a>
                         <a class="social-icon" href="https://orcid.org/0000-0001-6123-7595"><i class="ai ai-orcid-square ai-3x"></i></a>
                         <a class="social-icon" href="https://www.researchgate.net/profile/Yi-Yun-Cheng-2"><i class="ai ai-researchgate-square ai-3x"></i></a>
-                        <a class="social-icon" href="https://github.com/yiyunyc2/yiyunyc2.github.io/blob/9f822764f4fbbb1c37540bc2873a14cfff1cecf5/cv/CV_YYC.pdf"><i class="ai ai-cv-square ai-3x"></i></a>
+                        <a class="social-icon" href="https://docs.google.com/document/d/1po13TiWV9ai98nRd5h7NHSOY34GQOany/edit?usp=sharing&ouid=101501562269293256749&rtpof=true&sd=true"><i class="ai ai-cv-square ai-3x"></i></a>
                        
                        
                     </div>
