--- a/index.html
+++ b/index.html
@@ -217,8 +217,16 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Grants & Awards</h2>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Berner-Nash Doctoral Dissertation Award
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Grants for Individual Faculty Research, SC&I, Rutgers
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Beta Phi Mu Eugene Garfield Doctoral Dissertation Fellowship
