--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                      </ul> 
                     
                     
-                    <p class="lead mb-5">I am looking to recruit 1-2 doctoral students. If you are a prospective PhD student interested in working with me, please apply through the Rutgers SC&I PhD program and mention my name in your application materials. If you are a current PhD, Master's or undegraduate student at Rutgers, please email me to inquire further details. </p>
+                    <p class="lead mb-5">I am looking to recruit 1-2 doctoral students. If you are a prospective PhD student interested in working with me, please apply through the Rutgers SC&I PhD program and mention my name in your application materials. If you are a current PhD, Master's or undegraduate student at Rutgers, please email me to inquire further details about research or independet study opportunities. </p>
 
                     <div class="social-icons">
                         <a class="social-icon" href="https://scholar.google.com/citations?hl=en&user=Twgvb7AAAAAJ"><i class="ai ai-google-scholar-square ai-3x"></i></a>
