--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#grants">Grants</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Teaching</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a></li>
                 </ul>
             </div>
         </nav>
@@ -230,7 +230,7 @@
             </section>
             <hr class="m-0" />
             <!-- Teaching-->
-            <section class="resume-section" id="Teaching">
+            <section class="resume-section" id="teaching">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Teaching</h2>
                 
