--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Grants & Awards</h2>
+                    <h2 class="mb-5">Awards</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
