--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Digital Curation (SC&I)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Retrieving and Evaluating Electronic Information  (SC&I)
+                        </li>                        
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
                             Metadata in Theory and Practice (UIUC)
                         </li>
                         <li>
